# plugins

./: .gitignore  build.js  index.json
.github/workflows/: release.yml
index.json/: index.json
plugins/: chat.wasm  commit_summary.wasm
plugins/chat/: Cargo.toml  README.md  build.sh  metadata.json
plugins/chat/src/: lib.rs
plugins/commit-summary/: Cargo.toml  README.md  build.sh  metadata.json
plugins/commit-summary/built/: commit_summary.wasm
plugins/commit-summary/src/: commit_summary.rs  lib.rs
wit/: host.wit
